[ci skip] add tzdata for pyodide b69d3e03a242a439d42f00303b39255e1d1cf79e

--- a/_sources/content/notebooks/multiple_horizons_prediction.ipynb
+++ b/_sources/content/notebooks/multiple_horizons_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "903bf7bd",
+   "id": "2286d0a5",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01b602b2",
+   "id": "4e83daa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "438fe569",
+   "id": "ff264400",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -42,6 +42,7 @@
     "import altair\n",
     "import cloudpickle\n",
     "import pyarrow  # noqa: F401\n",
+    "import tzdata  # noqa: F401\n",
     "\n",
     "from tutorial_helpers import plot_horizon_forecast\n",
     "\n",
@@ -52,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "992f399d",
+   "id": "761389ac",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "925f6fbd",
+   "id": "812280dd",
    "metadata": {},
    "source": [
     "\n",
@@ -93,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9fbb494",
+   "id": "34ecca09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c88463f",
+   "id": "0bad2197",
    "metadata": {},
    "source": [
     "\n",
@@ -121,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e709797b",
+   "id": "10c9c70e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "314b0cf8",
+   "id": "58e26c07",
    "metadata": {},
    "source": [
     "\n",
@@ -147,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99cfefff",
+   "id": "61d7c83a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5385c29c",
+   "id": "adcfbfc1",
    "metadata": {},
    "source": [
     "\n",
@@ -185,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "634b0760",
+   "id": "8bbd6341",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ea372ad",
+   "id": "cc7f762a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2e8aef0",
+   "id": "3c18fedf",
    "metadata": {},
    "source": [
     "\n",
@@ -249,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc9026ed",
+   "id": "9c49705a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b3862b0",
+   "id": "cd53a363",
    "metadata": {},
    "source": [
     "\n",
@@ -269,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4c36c1b",
+   "id": "804beeb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b56dc00",
+   "id": "2daec7af",
    "metadata": {},
    "source": [
     "\n",
@@ -345,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16eb246e",
+   "id": "7f6f199e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fea52666",
+   "id": "67082ec7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30aa3b94",
+   "id": "fdfd1c66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10ec16db",
+   "id": "c6148aab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e978c0d6",
+   "id": "2670ccd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8270bebc",
+   "id": "96690416",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "266445b3",
+   "id": "9ae1ac76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e53fd00",
+   "id": "cf44baf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50acbeba",
+   "id": "4ae4b3a9",
    "metadata": {},
    "source": [
     "\n",
