--- a/_sources/content/notebooks/prediction_intervals.ipynb
+++ b/_sources/content/notebooks/prediction_intervals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "abd83762",
+   "id": "bcf7d09d",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f30de9c",
+   "id": "9782b1b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cf2fda8",
+   "id": "db5000fd",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -43,6 +43,7 @@
     "import numpy as np\n",
     "import pyarrow  # noqa: F401\n",
     "import polars as pl\n",
+    "import tzdata  # noqa: F401\n",
     "\n",
     "from tutorial_helpers import (\n",
     "    binned_coverage,\n",
@@ -59,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cd965f4",
+   "id": "bdfdfcf4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0f31663",
+   "id": "4f0d2a1c",
    "metadata": {},
    "source": [
     "### Define the quantile regressors\n",
@@ -97,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "537dd50d",
+   "id": "07f5f35c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "667e26e2",
+   "id": "a1a62801",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76444ee7",
+   "id": "4978cea2",
    "metadata": {},
    "source": [
     "\n",
@@ -143,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6917af97",
+   "id": "57054604",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af8829bb",
+   "id": "ba0691b7",
    "metadata": {},
    "source": [
     "\n",
@@ -181,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b53cb829",
+   "id": "eae540cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7077d44",
+   "id": "4652638f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "610e7f14",
+   "id": "61f60c90",
    "metadata": {},
    "source": [
     "\n",
@@ -238,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa0b26a8",
+   "id": "06c5286d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4134bb9c",
+   "id": "777cb7d7",
    "metadata": {},
    "source": [
     "\n",
@@ -266,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "419e7f27",
+   "id": "72c5889e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "664f161a",
+   "id": "b7a59708",
    "metadata": {},
    "source": [
     "\n",
@@ -301,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90171e34",
+   "id": "03763513",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eddb785a",
+   "id": "b17eb0ab",
    "metadata": {},
    "source": [
     "\n",
@@ -342,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7187220e",
+   "id": "10b0d613",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "742b653a",
+   "id": "aa1185a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f9d41ea",
+   "id": "0250849a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efb6d71d",
+   "id": "0fdc06d4",
    "metadata": {},
    "source": [
     "\n",
@@ -393,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c223b87",
+   "id": "1913cf0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8aa40025",
+   "id": "b9096489",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aabaa254",
+   "id": "9dd0341f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb57eb06",
+   "id": "2d1e7488",
    "metadata": {},
    "source": [
     "\n",
@@ -449,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "721ee8e6",
+   "id": "e4608597",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62db5ce7",
+   "id": "963a792c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ac60ccd",
+   "id": "29bb3705",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -516,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dde0a66",
+   "id": "75e6afd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "792dd708",
+   "id": "0c15ae53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19d5cd1e",
+   "id": "074f595a",
    "metadata": {},
    "source": [
     "\n",
@@ -566,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5908791",
+   "id": "e8ef2cea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a80a778",
+   "id": "e6bc75f2",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f98820c",
+   "id": "1dd77af1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbe7b870",
+   "id": "41b65ba2",
    "metadata": {},
    "source": [
     "\n",
@@ -618,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77b9ba5e",
+   "id": "ba1419cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37b419c4",
+   "id": "0fc1e458",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f5c3d45",
+   "id": "8a6c9f92",
    "metadata": {},
    "source": [
     "\n",
@@ -663,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32bbd616",
+   "id": "8330b509",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "188b77af",
+   "id": "022deba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a96357e",
+   "id": "461da2a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a907fa6",
+   "id": "6c76ee57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b78b2d6",
+   "id": "1dbb91ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "807f509a",
+   "id": "f2459d75",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -742,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1e5ecb2",
+   "id": "0b9e9ae3",
    "metadata": {},
    "source": [
     "\n",
@@ -780,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5cf03df",
+   "id": "fc0cb5cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b1162ee",
+   "id": "91753627",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29fd8e8a",
+   "id": "407f4f6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e7eda24",
+   "id": "e3e3a236",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "326f53cb",
+   "id": "21c30c0e",
    "metadata": {
     "title": "[markdown"
    },
@@ -979,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cc9c914",
+   "id": "06187093",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9538f4b6",
+   "id": "bb0ae962",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "631b1f71",
+   "id": "451cc074",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1021,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15d7b51f",
+   "id": "b5dce648",
    "metadata": {},
    "source": [
     "\n",
@@ -1031,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a195e208",
+   "id": "9552ae96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0df4856",
+   "id": "95505518",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f84816a3",
+   "id": "c71e5bc8",
    "metadata": {},
    "outputs": [],
    "source": [
