--- a/jupyterlite/files/notebooks/direct_vs_recursive_forecasting.ipynb
+++ b/jupyterlite/files/notebooks/direct_vs_recursive_forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "24416209",
+   "id": "9f4ae379",
    "metadata": {},
    "source": [
     "# Direct vs Recursive Forecasting\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88092541",
+   "id": "45e51d11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +50,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import tzdata  # noqa: F401\n",
     "\n",
     "SEGMENT_LENGTH = 30\n",
     "\n",
@@ -117,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adc9269c",
+   "id": "c83c9a93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e184d5e",
+   "id": "d21d13d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4ed35ce",
+   "id": "05c351de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2803259a",
+   "id": "226fc18c",
    "metadata": {},
    "source": [
     "\n",
@@ -238,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b9e09e0",
+   "id": "4167ae6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7e45b37",
+   "id": "0a56be37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19d4c089",
+   "id": "82d6cb23",
    "metadata": {},
    "source": [
     "\n",
@@ -296,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0250ec63",
+   "id": "b4acf57b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb70e29a",
+   "id": "e57ef401",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfdb8cf5",
+   "id": "47b5beaa",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -331,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e603220a",
+   "id": "75795df7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40bd6ca4",
+   "id": "f415d92b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -370,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ffaae4e",
+   "id": "b24606dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8a3b21b",
+   "id": "89c8a0cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b78391d",
+   "id": "9f4d47af",
    "metadata": {},
    "outputs": [],
    "source": [
