--- a/jupyterlite/files/notebooks/multiple_horizons_prediction.ipynb
+++ b/jupyterlite/files/notebooks/multiple_horizons_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "65054fe0",
+   "id": "e9a360b8",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3978cfc8",
+   "id": "bc8396e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8cf8380",
+   "id": "68978b18",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -42,6 +42,7 @@
     "import altair\n",
     "import cloudpickle\n",
     "import pyarrow  # noqa: F401\n",
+    "import tzdata  # noqa: F401\n",
     "\n",
     "from tutorial_helpers import plot_horizon_forecast\n",
     "\n",
@@ -52,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e0a8e60",
+   "id": "91c7006c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "459bb3d5",
+   "id": "356ba0ec",
    "metadata": {},
    "source": [
     "\n",
@@ -93,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4cbc0b8",
+   "id": "bd08d71d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9eb4a8a",
+   "id": "f023f27e",
    "metadata": {},
    "source": [
     "\n",
@@ -121,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "431cc8b0",
+   "id": "1adfd584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18a08235",
+   "id": "09d054c8",
    "metadata": {},
    "source": [
     "\n",
@@ -147,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32f2515c",
+   "id": "a36edee7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e826d86",
+   "id": "1634889d",
    "metadata": {},
    "source": [
     "\n",
@@ -185,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffb8f191",
+   "id": "961a659d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5106e7bf",
+   "id": "312912ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab9e2443",
+   "id": "2e26478d",
    "metadata": {},
    "source": [
     "\n",
@@ -249,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c09f9f84",
+   "id": "f84ce282",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6b49a91",
+   "id": "3a8b54ef",
    "metadata": {},
    "source": [
     "\n",
@@ -269,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0184a416",
+   "id": "ec5080fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ae21361",
+   "id": "81ce63cd",
    "metadata": {},
    "source": [
     "\n",
@@ -345,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41e86065",
+   "id": "cf7789ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6f2c127",
+   "id": "7316e082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92463ad2",
+   "id": "6af89724",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae3dde48",
+   "id": "0bd0ed6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36a6aa3a",
+   "id": "6aab63b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93db3b77",
+   "id": "43ba718e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "969f8ae3",
+   "id": "80f4094c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f852c63",
+   "id": "3526223c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b43f6ed4",
+   "id": "ff8b7a04",
    "metadata": {},
    "source": [
     "\n",
