--- a/jupyterlite/files/notebooks/prediction_intervals.ipynb
+++ b/jupyterlite/files/notebooks/prediction_intervals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dc968eed",
+   "id": "212dd53a",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "216915a9",
+   "id": "af8bab9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "245a1492",
+   "id": "dd552fa2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -43,6 +43,7 @@
     "import numpy as np\n",
     "import pyarrow  # noqa: F401\n",
     "import polars as pl\n",
+    "import tzdata  # noqa: F401\n",
     "\n",
     "from tutorial_helpers import (\n",
     "    binned_coverage,\n",
@@ -59,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68768d46",
+   "id": "f678870a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aae8d11",
+   "id": "1d43cefb",
    "metadata": {},
    "source": [
     "### Define the quantile regressors\n",
@@ -97,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d211559a",
+   "id": "b54b5084",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "223f2ded",
+   "id": "5b952f30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27636548",
+   "id": "ecee9708",
    "metadata": {},
    "source": [
     "\n",
@@ -143,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ab8d7cb",
+   "id": "e135b9b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b08052e",
+   "id": "133ccfb5",
    "metadata": {},
    "source": [
     "\n",
@@ -181,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103990db",
+   "id": "40563bda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44cc4f65",
+   "id": "70630da2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5a69f0d",
+   "id": "351587c4",
    "metadata": {},
    "source": [
     "\n",
@@ -238,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5b98934",
+   "id": "079c9a05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b9be7db",
+   "id": "86344e29",
    "metadata": {},
    "source": [
     "\n",
@@ -266,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d1a9951",
+   "id": "050e736e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67fa3822",
+   "id": "cb975df4",
    "metadata": {},
    "source": [
     "\n",
@@ -301,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52d8de0c",
+   "id": "e9d8b4fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6315087",
+   "id": "4520c016",
    "metadata": {},
    "source": [
     "\n",
@@ -342,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "327f5a48",
+   "id": "af91007e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74b285ef",
+   "id": "e7896f8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd709a18",
+   "id": "ac0f53ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e774d87a",
+   "id": "fbc85fd5",
    "metadata": {},
    "source": [
     "\n",
@@ -393,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b7a184f",
+   "id": "9971f1e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acb02939",
+   "id": "02632720",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5361642c",
+   "id": "adbbf8ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e001d599",
+   "id": "681088ee",
    "metadata": {},
    "source": [
     "\n",
@@ -449,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92b181c8",
+   "id": "160e09b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e7fbd2e",
+   "id": "46907de3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e1b37a9",
+   "id": "e5b8cff5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -516,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ebbc923",
+   "id": "a785d482",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f4b05df",
+   "id": "2b418b0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fb2a7ba",
+   "id": "57e99816",
    "metadata": {},
    "source": [
     "\n",
@@ -566,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d663a480",
+   "id": "7654653c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8b81a02",
+   "id": "a761e8a1",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d82f94f",
+   "id": "0b8f01a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a955c37",
+   "id": "4ccf2138",
    "metadata": {},
    "source": [
     "\n",
@@ -618,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "509aca40",
+   "id": "cf97afb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be7947bc",
+   "id": "71cf9887",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9874a1e5",
+   "id": "ad4117fb",
    "metadata": {},
    "source": [
     "\n",
@@ -663,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e637f112",
+   "id": "18443586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5b4ed23",
+   "id": "b262a346",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92a04094",
+   "id": "cdefd3c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85697f10",
+   "id": "6572cfd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9697a426",
+   "id": "14a06dac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe1a6f9f",
+   "id": "2513af57",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -742,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3baac64e",
+   "id": "cfded457",
    "metadata": {},
    "source": [
     "\n",
@@ -780,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edd149b7",
+   "id": "cb0d9e0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4717618e",
+   "id": "2c340536",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abb3a53c",
+   "id": "4b0a201d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6554b9c9",
+   "id": "281a5cee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77d205d3",
+   "id": "380a42c4",
    "metadata": {
     "title": "[markdown"
    },
@@ -979,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "600071d9",
+   "id": "e3ac0837",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a2af956",
+   "id": "4c89e463",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dc21573",
+   "id": "3ceb8d7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1021,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ab27e45",
+   "id": "051eb0fa",
    "metadata": {},
    "source": [
     "\n",
@@ -1031,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47a80348",
+   "id": "6df91c1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5f2f5e4",
+   "id": "297db98e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3c2c740",
+   "id": "0c4aa7e4",
    "metadata": {},
    "outputs": [],
    "source": [
