--- a/jupyterlite/files/notebooks/single_horizon_prediction.ipynb
+++ b/jupyterlite/files/notebooks/single_horizon_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c6920a3a",
+   "id": "094fc924",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8579f38c",
+   "id": "54b86bfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b165846b",
+   "id": "02512841",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -42,6 +42,7 @@
     "import cloudpickle\n",
     "import pyarrow  # noqa: F401\n",
     "import skrub\n",
+    "import tzdata  # noqa: F401\n",
     "from plotly.io import write_json, read_json  # noqa: F401\n",
     "\n",
     "from tutorial_helpers import (\n",
@@ -60,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e26909b",
+   "id": "276a0595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7b719b3",
+   "id": "2643c5c7",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -90,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9dd14c8",
+   "id": "1087bcd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c99c9ae",
+   "id": "f64042d3",
    "metadata": {},
    "source": [
     "\n",
@@ -120,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0a40d78",
+   "id": "2c047ef0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23bc9bfa",
+   "id": "c947d102",
    "metadata": {},
    "source": [
     "\n",
@@ -183,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6516d520",
+   "id": "e51c58b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "723ebdc0",
+   "id": "10bac36d",
    "metadata": {},
    "source": [
     "\n",
@@ -203,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8a4b83a",
+   "id": "bb1955d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8e2efba",
+   "id": "6612ec77",
    "metadata": {},
    "source": [
     "\n",
@@ -224,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b14ded84",
+   "id": "b48d0dc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6bda75f",
+   "id": "c3b5308a",
    "metadata": {},
    "source": [
     "\n",
@@ -271,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00807664",
+   "id": "7799c01a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2df8d249",
+   "id": "2ce5d2c2",
    "metadata": {},
    "source": [
     "\n",
@@ -331,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ec98a26",
+   "id": "7b868d3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9054aee7",
+   "id": "7bc9e783",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -386,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4668a5d",
+   "id": "54a6076e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5593ccdc",
+   "id": "1b636409",
    "metadata": {},
    "source": [
     "\n",
@@ -410,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a6009fc",
+   "id": "c98e4752",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d53bdf2f",
+   "id": "bca565f8",
    "metadata": {},
    "source": [
     "\n",
@@ -441,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61fe36a6",
+   "id": "e3f1f4c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c273269b",
+   "id": "fb0c5c71",
    "metadata": {},
    "source": [
     "\n",
@@ -480,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "983ee1f5",
+   "id": "67f31c13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15769d15",
+   "id": "2ba9a56a",
    "metadata": {},
    "source": [
     "\n",
@@ -509,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c308e1c",
+   "id": "94c509b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c15f0271",
+   "id": "0bfae3c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfe7425b",
+   "id": "550bb4f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41b3c766",
+   "id": "7b4e6bbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b47eac0",
+   "id": "bda8c98e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dbc02b1",
+   "id": "ebae0d81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "044acf9a",
+   "id": "5509e2ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2602126",
+   "id": "37465a5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62de884a",
+   "id": "43bc704b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -660,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9636ebe",
+   "id": "e4c53a35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d7ed9e6",
+   "id": "1c650252",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c3a2f49",
+   "id": "6b5c7bb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3e419d4",
+   "id": "b9c2f83b",
    "metadata": {},
    "source": [
     "\n",
@@ -739,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fd5412c",
+   "id": "8020d3cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e35b4a0",
+   "id": "01915772",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51bf28a8",
+   "id": "809eff95",
    "metadata": {},
    "source": [
     "Do a sanity check by plotting the observed values and predictions for the first fold\n",
@@ -793,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a3b0777",
+   "id": "b90c84dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2f32f3b",
+   "id": "04969d65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c29bc9b",
+   "id": "c2df252b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f870aeb",
+   "id": "97ae81f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a737e437",
+   "id": "ad9228b6",
    "metadata": {},
    "source": [
     "\n",
@@ -861,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8871064",
+   "id": "8f9fe5e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54bde6a5",
+   "id": "5da68d3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ffc316d",
+   "id": "793a26eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e17819b",
+   "id": "e0757568",
    "metadata": {},
    "source": [
     "\n",
@@ -915,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff6c8e76",
+   "id": "441df964",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca0c3910",
+   "id": "983ef013",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb04195",
+   "id": "aefc1965",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e28f055",
+   "id": "f7bb4e82",
    "metadata": {},
    "source": [
     "\n",
@@ -971,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9d2519e",
+   "id": "6c3e56da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d97e2554",
+   "id": "66d532b8",
    "metadata": {},
    "outputs": [],
    "source": [
