--- a/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
+++ b/_sources/content/notebooks/direct_vs_recursive_forecasting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ee483c90",
+   "id": "a6e5c7ea",
    "metadata": {},
    "source": [
     "# Direct vs Recursive Forecasting\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5d73144",
+   "id": "a337e537",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +50,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import tzdata  # noqa: F401\n",
     "\n",
     "SEGMENT_LENGTH = 30\n",
     "\n",
@@ -117,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b87da04",
+   "id": "1810347d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91e11fa7",
+   "id": "93191c26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81bb4641",
+   "id": "9af8a92a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef6f2802",
+   "id": "5e5e1965",
    "metadata": {},
    "source": [
     "\n",
@@ -238,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da8ac34f",
+   "id": "645bb605",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4e8d4db",
+   "id": "53ce2e6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b56c6664",
+   "id": "1d6e5778",
    "metadata": {},
    "source": [
     "\n",
@@ -296,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95d49a70",
+   "id": "c8bc79a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfcb6977",
+   "id": "05236b89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e30d9853",
+   "id": "d52209ce",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -331,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6edad800",
+   "id": "e1ac80c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1fc2bf2",
+   "id": "dba69ebe",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -370,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4b24595",
+   "id": "8da2583e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20be8335",
+   "id": "ac7cfc2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c99c8a41",
+   "id": "ef5d6ea5",
    "metadata": {},
    "outputs": [],
    "source": [
