--- a/_sources/content/notebooks/single_horizon_prediction.ipynb
+++ b/_sources/content/notebooks/single_horizon_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e18d52d",
+   "id": "b97dfd3e",
    "metadata": {},
    "source": [
     "\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8884fbe8",
+   "id": "f3b07e63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e6cf4ce",
+   "id": "605aec41",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -42,6 +42,7 @@
     "import cloudpickle\n",
     "import pyarrow  # noqa: F401\n",
     "import skrub\n",
+    "import tzdata  # noqa: F401\n",
     "from plotly.io import write_json, read_json  # noqa: F401\n",
     "\n",
     "from tutorial_helpers import (\n",
@@ -60,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c99fcfe",
+   "id": "0b79db61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "662cb5f3",
+   "id": "3b6763cc",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -90,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8356dfd8",
+   "id": "7a03a68f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a16728be",
+   "id": "bbf86396",
    "metadata": {},
    "source": [
     "\n",
@@ -120,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7557539",
+   "id": "1acd60c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b6d2f08",
+   "id": "e8bf05e3",
    "metadata": {},
    "source": [
     "\n",
@@ -183,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42eb7a3d",
+   "id": "857bf22d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "315d84b5",
+   "id": "9c3e5abb",
    "metadata": {},
    "source": [
     "\n",
@@ -203,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf284744",
+   "id": "40b25e0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1371333e",
+   "id": "ce95010d",
    "metadata": {},
    "source": [
     "\n",
@@ -224,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92bf347e",
+   "id": "bd002dfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16d6fb94",
+   "id": "cf0ba01b",
    "metadata": {},
    "source": [
     "\n",
@@ -271,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56bfe6d1",
+   "id": "54659edc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99334d23",
+   "id": "0353f38c",
    "metadata": {},
    "source": [
     "\n",
@@ -331,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbb6643a",
+   "id": "9e536ddd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d483888",
+   "id": "d35f2384",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -386,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95359b55",
+   "id": "6d260d36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aeb50d9",
+   "id": "15a7b090",
    "metadata": {},
    "source": [
     "\n",
@@ -410,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f33c785a",
+   "id": "a4182dfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3c44ab8",
+   "id": "4a62c98f",
    "metadata": {},
    "source": [
     "\n",
@@ -441,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27c37630",
+   "id": "7e96b705",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceffcbb7",
+   "id": "d2f94072",
    "metadata": {},
    "source": [
     "\n",
@@ -480,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74a74e9a",
+   "id": "75f06b9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f31c2d55",
+   "id": "c1d57bac",
    "metadata": {},
    "source": [
     "\n",
@@ -509,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7273738f",
+   "id": "90d581cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a51a9784",
+   "id": "1dffd92d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d52d1dd6",
+   "id": "a0b5ec89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a833424",
+   "id": "78672063",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7014e09a",
+   "id": "8bba3927",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa4e23fd",
+   "id": "a88e782b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc9e7049",
+   "id": "120c75b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5da5d9c",
+   "id": "9843cf30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d831bdf",
+   "id": "54d69f1a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -660,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ab5413c",
+   "id": "be993610",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1492ed39",
+   "id": "e156ea56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24f1ed1d",
+   "id": "593a7f7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "692ea240",
+   "id": "0c4580ff",
    "metadata": {},
    "source": [
     "\n",
@@ -739,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1be878b7",
+   "id": "f0138c77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d3e2fd8",
+   "id": "b41e7511",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78036ab9",
+   "id": "82c5d460",
    "metadata": {},
    "source": [
     "Do a sanity check by plotting the observed values and predictions for the first fold\n",
@@ -793,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77e8804d",
+   "id": "96ec7b1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdb5ba39",
+   "id": "23d5c9b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fb7beb0",
+   "id": "3310aa0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f2c4894",
+   "id": "d527ad74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cf390a1",
+   "id": "20e70679",
    "metadata": {},
    "source": [
     "\n",
@@ -861,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4528b7d0",
+   "id": "4d4087f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4d698b5",
+   "id": "217822fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01af81dc",
+   "id": "843738e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7086b5b6",
+   "id": "fa677c78",
    "metadata": {},
    "source": [
     "\n",
@@ -915,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6b8a9ad",
+   "id": "db56fa0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff05262c",
+   "id": "235c8b1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81c51c34",
+   "id": "a906f7b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52013317",
+   "id": "af7e8c67",
    "metadata": {},
    "source": [
     "\n",
@@ -971,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75c351a4",
+   "id": "6be0f2c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80a47db8",
+   "id": "1499006f",
    "metadata": {},
    "outputs": [],
    "source": [
